vitis_hls.log
ECHO is off.
ECHO is off.
INFO: [HLS 200-10] Running 'C:/ProgramData/Xilinx/Vitis_HLS/2023.2/bin/unwrapped/win64.o/vitis_hls.exe'
INFO: [HLS 200-10] For user 'marco' on host 'pc_di_marco' (Windows NT_amd64 version 6.2) on Mon Apr 08 17:06:01 +0200 2024
INFO: [HLS 200-10] In directory 'C:/Users/marco/Desktop/NECST/NL2/AXI_M'
INFO: [HLS 200-2053] The vitis_hls executable is being deprecated. Consider using vitis-run --mode hls --tcl
Sourcing Tcl script 'C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/solution1/cosim.tcl'
INFO: [HLS 200-1510] Running: source C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/solution1/cosim.tcl
INFO: [HLS 200-1510] Running: open_project AXI_M 
INFO: [HLS 200-10] Opening project 'C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M'.
INFO: [HLS 200-1510] Running: set_top setMem 
INFO: [HLS 200-1510] Running: add_files AXI_M/core.cpp 
INFO: [HLS 200-10] Adding design file 'AXI_M/core.cpp' to the project
INFO: [HLS 200-1510] Running: add_files AXI_M/core.h 
INFO: [HLS 200-10] Adding design file 'AXI_M/core.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb AXI_M/test_core.cpp -cflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'AXI_M/test_core.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution 'C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-1'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2023.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1464] Running solution command: config_cosim -rtl=vhdl
INFO: [HLS 200-1464] Running solution command: config_cosim -tool=xsim
INFO: [HLS 200-1464] Running solution command: config_cosim -trace_level=all
INFO: [HLS 200-1464] Running solution command: config_export -display_name=AXI_ALU
INFO: [HLS 200-1464] Running solution command: config_export -format=ip_catalog
INFO: [HLS 200-1464] Running solution command: config_export -output=C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M
INFO: [HLS 200-1464] Running solution command: config_export -rtl=verilog
INFO: [HLS 200-1464] Running solution command: config_export -version=1.0
INFO: [HLS 200-1510] Running: set_part xc7z020-clg400-1 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [HLS 200-1510] Running: config_cosim -rtl vhdl -tool xsim -trace_level all 
INFO: [HLS 200-1510] Running: config_export -display_name AXI_ALU -format ip_catalog -output C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M -rtl verilog -version 1.0 
INFO: [HLS 200-1510] Running: source ./AXI_M/solution1/directives.tcl
INFO: [HLS 200-1510] Running: set_directive_top -name setMem setMem 
INFO: [HLS 200-1510] Running: cosim_design -trace_level all -rtl vhdl 
INFO: [COSIM 212-47] Using XSIM for RTL simulation.
INFO: [COSIM 212-14] Instrumenting C test bench ...
   Build using "C:/ProgramData/Xilinx/Vitis_HLS/2023.2/tps/win64/msys64/mingw64/bin/g++"
   Compiling test_core.cpp_pre.cpp.tb.cpp
cosim.tv.mk:76: recipe for target 'obj/test_core.cpp_pre.cpp.tb.o' failed
C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/test_core.cpp: In function 'int main()':
C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/test_core.cpp:51:23: error: invalid conversion from 'int*' to 'int' [-fpermissive]
     setMem(A, B, C, OP);
                       ^
C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/test_core.cpp:18:6: note:   initializing argument 4 of 'void setMem(volatile int*, volatile int*, volatile int*, int)'
 void setMem(volatile int* a, volatile int* b, volatile int* c, int op);
      ^~~~~~
make: *** [obj/test_core.cpp_pre.cpp.tb.o] Error 1
ERROR: [COSIM 212-317] C++ compile error.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-331] Aborting co-simulation: C simulation failed, compilation errors.
ERROR: [COSIM 212-5] *** C/RTL co-simulation file generation failed. ***
ERROR: [COSIM 212-4] *** C/RTL co-simulation finished: FAIL ***
INFO: [HLS 200-111] Finished Command cosim_design CPU user time: 0 seconds. CPU system time: 0 seconds. Elapsed time: 3.85 seconds; current allocated memory: 5.211 MB.
command 'ap_source' returned error code
    while executing
"source C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/solution1/cosim.tcl"
    invoked from within
"hls::main C:/Users/marco/Desktop/NECST/NL2/AXI_M/AXI_M/solution1/cosim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 0 seconds. Total elapsed time: 6.011 seconds; peak allocated memory: 137.086 MB.
